added info to readme and clean the code