@@ -20,3 +20,14 @@ elements that dynamically change based on the situation (the number of lives
 remaining, key).
 
 Information about the method of launching the application:
+- Make sure you have JDK 17 installed on your system.
+- Open a terminal or command prompt and navigate to the directory containing the pom.xml file
+- Use the following command to compile the application:
+        mvn clean compile
+- After a successful compilation, you can package the application into a JAR file using the following command:
+        mvn package
+- If the packaging was successful, you can run the application using the following command:
+        java --module-path <path-to-javafx-sdk>/lib --add-modules javafx.controls,javafx.fxml -jar target/mazegame-1.0-SNAPSHOT.jar
+
+To generate documentation you can use next command:
+        mvn javadoc:javadoc
